# fqml_template

./: .gitignore  README.md  pyproject.toml
notebooks/: example.ipynb
src/client/: __init__.py  cifar_client.py
src/model/: classical_nn.py  quantum_nn.py  training_utils.py
src/server/: __init__.py  server_strategy.py
